# uMotor

./: .gitignore  CMakeLists.txt  README.md  cheatsheet.md
backends/raylib/: CMakeLists.txt  raylib_engine.cc  raylib_engine.h
examples/: CMakeLists.txt
examples/asteroids/: CMakeLists.txt
examples/asteroids/src/: main.cc
examples/bouncing_ball/: CMakeLists.txt  main.cc
examples/hello_umotor/: CMakeLists.txt  main.cc
examples/particles/: CMakeLists.txt  main.cc
examples/platformer/: CMakeLists.txt
examples/platformer/assets/: Sprite-0001.ase
examples/platformer/include/: player.h  tilemap.h
examples/platformer/src/: main.cc  player.cc  tilemap.cc
include/: umotor.h
include/umotor/: engine.h  entity.h  scene.h
src/: engine.cc  entity.cc  scene.cc
tests/: CMakeLists.txt  tests.cc
